# GraphSummarization

Graph_Summarization/: CMakeLists.txt  Readme.md  algo.cpp  algo.hpp  config.cpp  config.hpp  graph.cpp  graph.hpp  main.cpp  utility.cpp  utility.hpp
Graph_Summarization.xcodeproj/: project.pbxproj
Graph_Summarization.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Graph_Summarization.xcodeproj/project.xcworkspace/xcuserdata/apple.xcuserdatad/: UserInterfaceState.xcuserstate
Graph_Summarization.xcodeproj/xcuserdata/apple.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Graph_Summarization.xcodeproj/xcuserdata/apple.xcuserdatad/xcschemes/: Graph_Summarization.xcscheme  xcschememanagement.plist
Graph_Summarization/data/email/: attribute.txt
Graph_Summarization/data/test1/: attribute.txt  graph.txt
Graph_Summarization/data/test10/: attribute.txt  graph.txt
Graph_Summarization/data/test2/: attribute.txt  graph.txt
Graph_Summarization/data/test3/: attribute.txt  graph.txt
Graph_Summarization/data/test4/: graph.txt
Graph_Summarization/data/test5/: attribute.txt  graph.txt
Graph_Summarization/data/test6/: attribute.txt  graph.txt
Graph_Summarization/data/test7/: graph.txt
Graph_Summarization/data/test8/: attribute.txt  graph.txt
Graph_Summarization/data/test9/: attribute.txt  graph.txt
